[package]
name = "dht-crawler"
version = "0.1.0"
authors = ["The 8472 <git@infinite-source.de>"]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "0.2.3"
serde_bencoded = "0.3.0"
serde = "^1.0.0"
serde_derive = "^1.0.0"
io-uring = "0.5.2"
rand = "0.8.3"
serde_bytes = "0.11.5"
socket2 = "0.4.1"
log = "0.4.14"
fern = "0.6.0"
hdrhistogram = "7.2.0"
hex = "0.4.3"
skip32 = "1.0.5"
lazy_static = "1.4.0"
rusqlite = "0.28.0"
crossbeam-channel = "0.5.1"
blake2 = "0.10.0"
tokio-uring = "0.3.0"
mio = {version = "0.8", features = ["net"]}
crc = "3.0.0"
nix = "0.25.0"

[profile.release]
debug=1
lto=true
codegen-units=1

[workspace]
